--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -61,7 +61,7 @@ const creditsSection = isRunway ? 'Enlaces de Interés' : 'Créditos';
 <MainLayout title={post.title}>
   <main class="container mx-auto min-h-screen px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col gap-4 bg-white">
     <a href={backLinkUrl} class=" text-[#220d0c] text-xl md:text-base text-left hover:underline">&larr;{backLinkText}</a>
-    <h1 class="text-4xl md:text-5xl font-bold mb-8 text-[#541409] text-center">{post.title}</h1>
+    <h1>{post.title}</h1>
     <div class="text-center text-2xl md:text-3xl gap-1">
       <p class="text-[#541409] opacity-60">{new Date(post.publishedAt).getFullYear()}</p>
     </div>
