--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -40,7 +40,7 @@ import ContactForm from '../components/ContactForm.jsx';
 ---
 <MainLayout title="Contacto">
   <main class="container mx-auto min-h-screen px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8 flex flex-col items-center">
-    <h1 class=" text-[#541409] text-center text-4xl md:text-5xl font-bold mb-8">Contáctame</h1>
+    <h1>Contáctame</h1>
 
     <div class="flex flex-col md:flex-row items-center md:items-start gap-8 w-full max-w-3xl">
       <!-- Picture Frame (Left Column on Desktop) -->
