--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -43,7 +43,7 @@ const allTags = [...new Set(posts.flatMap(post => post.tags || []))];
 ---
 <MainLayout title="Todos mis Proyectos">
   <main class="container mx-auto min-h-screen px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8">
-    <h1 class=" text-[#541409] text-center text-4xl md:text-5xl font-bold mb-8">Todos mis Proyectos</h1>
+    <h1>Todos mis Proyectos</h1>
 
     <!-- Tag Filters -->
     <div id="tag-filters" class="text-xl md:text-2xl flex justify-center flex-wrap gap-2 mb-8">
