--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,12 +28,13 @@ html.dark {
   box-sizing: border-box;
 }
 
-h1 {
-  margin: 1rem 0;
-  font-size: 2.5rem;
-}
-
 @layer base {
   body {
+  }
+  h1 {
+    @apply text-[#541409] text-center text-4xl md:text-5xl font-bold mb-8;
+  }
+  h3 {
+    @apply text-2xl md:text-3xl font-bold text-[#220d0c] mb-4;
   }
 }
