--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,14 +52,14 @@ const content = await sanityClient.fetch<SanityDocument>(QUERY);
 const imageProps = content && content.cover && content.cover.image ? generateImageProps(content.cover.image, '(min-width: 512px) 512px, calc(100vw - 2rem)') : null;
 ---
 <MainLayout title={content?.title}>
-  <main class="flex flex-col container mx-auto min-h-screen  px-4 md:px-8 pt-2 md:pt-4 pb-4 md:pb-8">
+  <main class="flex flex-col container mx-auto min-h-screen md:px-6 pt-2 md:pt-4 pb-2 md:pb-4">
     {content ? (
       <>
       <!-- About me Section -->
-          <h1 style="font-family: 'Nanum Myeongjo', serif;">
+          <h1>
             {content.title}
           </h1>
-          <h2 class="text-[#541409] opacity-60 text-center text-2xl md:text-2xl mb-8 ">
+          <h2 style="font-family: Montserrat;" class="text-[#541409] opacity-80 text-center text-2xl md:text-2xl mb-8 ">
             {content.subtitle}
           </h2>
 
@@ -83,7 +83,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
                 </p>
               </div>
               <div class="text-xl md:textl md:ml-4 text-left text-[#220d0c] rounded-lg p-4 shadow-2xl">
-              <h2 class="text-[#541409] opacity-80 text-center text-2xl md:text-2xl mb-3">Servicios Disponibles</h2>
+              <h2 style="font-family: Montserrat;" class="text-[#541409] text-center text-2xl md:text-2xl mb-3">Servicios Disponibles</h2>
                 <div class="grid grid-cols-5">
                   <div class="col-span-1"></div>
                   <div class="col-span-3">
@@ -100,7 +100,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <!-- Column 1: Studies and Certificates -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
-            <h3>Estudios y Certificaciones</h3>
+            <h3 class="opacity-80">Estudios y Certificaciones</h3>
             <div class="text-xl md:text-xl text-[#220d0c]">
               {Array.isArray(content.studiesAndCertificates) && <PortableText value={content.studiesAndCertificates} />}
             </div>
@@ -108,7 +108,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
 
           <!-- Column 2: Hard Skills -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
-            <h3>Habilidades Técnicas</h3>
+            <h3 class="opacity-80">Habilidades Técnicas</h3>
             <div class="prose prose-xl text-left">
               {Array.isArray(content.hardSkills) && <PortableText value={content.hardSkills} components={portableTextComponents} />}
             </div>
@@ -116,7 +116,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
 
           <!-- Column 3: Brands Worked With -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
-            <h3>He Colaborado con</h3>
+            <h3 class="opacity-80">He Colaborado con</h3>
             <div class="text-xl md:text-2xl text-[#220d0c]">
               {content.brandsWorkedWith && content.brandsWorkedWith.length > 0 && (
                 <Masonry breakAt={{ 0: 2, 640: 3 }} gap={8}> {/* 2 cols mobile, 3 cols desktop for brands */}
@@ -187,7 +187,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
                       index % 2 === 1 ? "md:mr-6 md:text-right" : "md:ml-6 md:text-left",
                     ]}
                   >
-                    <h2 class="text-[#220d0c] text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1">{post.title}</h2>
+                    <h2 style="font-family: Montserrat;" class="text-[#220d0c] text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1">{post.title}</h2>
                     <div class=" text-center mt-2">
                       {Array.isArray(post.highlights) && <PortableText value={post.highlights} />}
                     </div>
