--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,11 +5,11 @@ import Button from './Button.astro';
   <div class="container mx-auto flex flex-col md:flex-row justify-center md:justify-between items-center px-4 md:px-8 gap-4">
     <!-- Navigation Links -->
     <nav>
-      <ul class="flex gap-4 text-xl md:text-xl items-center">
+      <ul class="title-font text-xl md:text-xl flex gap-4 items-center">
         <li><a href="/" class="hover:underline">Inicio</a></li>
         <li><a href="/posts" class="hover:underline">Proyectos</a></li>
         <li><a href="/assisting" class="hover:underline">Asistente</a></li>
-        <li><Button href="/contact">Contáctame</Button></li>
+        <li><Button class='main-title-font' href="/contact">Contáctame</Button></li>
       </ul>
     </nav>
 
