--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -57,7 +57,7 @@ import ContactForm from '../components/ContactForm.jsx';
       </div>
 
       <!-- Interactive React Contact Form (Right Column on Desktop) -->
-      <div class="w-full md:w-1/2">
+      <div class="title-font w-full md:w-1/2">
         <ContactForm client:load />
       </div>
     </div>
