--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,10 +56,10 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
     {content ? (
       <>
       <!-- About me Section -->
-          <h1>
+          <h1 class="mb-2 md:mb-2">
             {content.title}
           </h1>
-          <h2 style="font-family: Montserrat;" class="text-[#541409] opacity-80 text-center text-2xl md:text-2xl mb-8 ">
+          <h2 class="text-[#541409] opacity-80 text-center text-2xl md:text-2xl mb-8 ">
             {content.subtitle}
           </h2>
 
@@ -77,13 +77,13 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
             </div>
 
             <div class="w-full md:w-1/2 mt-6 mb-3 md:mt-0 md:mb-0">
-              <div class="text-xl md:text-2xl md:ml-4 text-center text-[#220d0c] rounded-lg p-4 ">
+              <div class="text-xl md:text-2xl md:ml-4 text-center mb-3 md:mb-4 text-[#220d0c] rounded-lg p-4 ">
                 <p>
                 {Array.isArray(content.shortDescription) && <PortableText value={content.shortDescription} />}
                 </p>
               </div>
               <div class="text-xl md:textl md:ml-4 text-left text-[#220d0c] rounded-lg p-4 shadow-2xl">
-              <h2 style="font-family: Montserrat;" class="text-[#541409] text-center text-2xl md:text-2xl mb-3">Servicios Disponibles</h2>
+              <h2 class="title-font text-[#541409] text-center text-2xl md:text-3xl mb-3">Servicios Disponibles</h2>
                 <div class="grid grid-cols-5">
                   <div class="col-span-1"></div>
                   <div class="col-span-3">
@@ -96,7 +96,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
         </div>
       <!-- Qualifications Section -->
       <div class="mt-12 mb-12">
-        <h2 class="text-3xl md:text-4xl text-center text-[#541409] font-bold mb-8">Mis Cualificaciones</h2>
+        <h2 class="main-title-font text-3xl md:text-4xl text-center text-[#541409] font-bold mb-8">Mis Cualificaciones</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <!-- Column 1: Studies and Certificates -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
@@ -108,7 +108,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
 
           <!-- Column 2: Hard Skills -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
-            <h3 class="opacity-80">Habilidades Técnicas</h3>
+            <h3 class="opacity-80">Habilidades técnicas</h3>
             <div class="prose prose-xl text-left">
               {Array.isArray(content.hardSkills) && <PortableText value={content.hardSkills} components={portableTextComponents} />}
             </div>
@@ -116,7 +116,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
 
           <!-- Column 3: Brands Worked With -->
           <div class="flex flex-col items-center text-center p-4 shadow-lg rounded-lg">
-            <h3 class="opacity-80">He Colaborado con</h3>
+            <h3 class="opacity-80">Marcas que han confiado en mi</h3>
             <div class="text-xl md:text-2xl text-[#220d0c]">
               {content.brandsWorkedWith && content.brandsWorkedWith.length > 0 && (
                 <Masonry breakAt={{ 0: 2, 640: 3 }} gap={8}> {/* 2 cols mobile, 3 cols desktop for brands */}
@@ -157,7 +157,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
 
       <!-- Top Projects Section -->
         <div class="mx-auto w-full md:w-1/3 md:mt-10 md:mb-10 mt-6 mb-6">
-          <h2 class="text-3xl md:text-4xl mt-3 mb-2 md:mt-0 text-center text-[#541409] font-bold">Proyectos Destacados</h2>
+          <h2 class="main-title-font text-3xl md:text-4xl mt-3 mb-2 md:mt-0 text-center text-[#541409] font-bold">Proyectos Destacados</h2>
         </div>
 
         <ul class="flex flex-col gap-y-4"> 
@@ -187,7 +187,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
                       index % 2 === 1 ? "md:mr-6 md:text-right" : "md:ml-6 md:text-left",
                     ]}
                   >
-                    <h2 style="font-family: Montserrat;" class="text-[#220d0c] text-2xl md:text-2xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1">{post.title}</h2>
+                    <h2 class=" title-font text-[#220d0c] text-2xl md:text-3xl group-hover:underline mt-4 md:mt-0 md:mr-1 md:ml-1">{post.title}</h2>
                     <div class=" text-center mt-2">
                       {Array.isArray(post.highlights) && <PortableText value={post.highlights} />}
                     </div>
@@ -196,7 +196,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
               </li>
             )
           })}
-          <a href="/posts" class="w-fit mx-auto bg-[#220d0c] text-white rounded-lg px-4 py-2 text-xl md:text-3xl">Todos Mis Proyectos</a>
+          <a href="/posts" class=" main-title-font w-fit mx-auto bg-[#220d0c] text-white rounded-lg px-4 py-2 text-xl md:text-3xl">Todos Mis Proyectos</a>
         </ul>
       </>
     ) : (
