fixed the fk bold

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ const imageProps = content && content.cover && content.cover.image ? generateIma
                 </p>
               </div>
               <div class="text-xl md:textl md:ml-4 text-left text-[#220d0c] rounded-lg p-4 shadow-2xl">
-              <h2 class="title-font text-[#541409] text-center text-2xl md:text-3xl mb-3">Servicios Disponibles</h2>
+              <h2 class="title-font text-[#541409] font-bold text-center text-2xl md:text-3xl mb-3">Servicios Disponibles</h2>
                 <div class="grid grid-cols-5">
                   <div class="col-span-1"></div>
                   <div class="col-span-3">
